--- a/tp2_dataset_analysis_Alimena_Ballesteros_Borda_Correa.ipynb
+++ b/tp2_dataset_analysis_Alimena_Ballesteros_Borda_Correa.ipynb
@@ -955,12 +955,32 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# Supervised learning (Decisions Tree)"
+   "source": "# Training of model"
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# Unsupervised learning (Center Based)"
+   "source": "### Import SKLearn libraries"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.model_selection import train_test_split\n"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Supervised learning (Decisions Tree)"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Unsupervised learning (Center Based)"
   }
  ]
 }
