The stadium is closed.

--- a/tp2_dataset_analysis_Alimena_Ballesteros_Borda_Correa.ipynb
+++ b/tp2_dataset_analysis_Alimena_Ballesteros_Borda_Correa.ipynb
@@ -2936,13 +2936,13 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### Division in training and testing data sets"
+   "source": "### Division in training, validating and testing data sets"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-27T16:55:07.991134Z",
-     "start_time": "2025-04-27T16:55:07.958122Z"
+     "end_time": "2025-04-27T19:01:16.873069Z",
+     "start_time": "2025-04-27T19:01:16.831887Z"
     }
    },
    "cell_type": "code",
@@ -2951,7 +2951,9 @@
     "\n",
     "print(X)\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.30, train_size=0.70, random_state=42, stratify=y)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.30, train_size=0.70, random_state=42, stratify=y)\n",
+    "\n",
+    "X_train, X_validate, y_train, y_validate = train_test_split(X_train, y_train, test_size=0.30, train_size=0.70, random_state=42, stratify=y_train)"
    ],
    "outputs": [
     {
@@ -3001,7 +3003,7 @@
      ]
     }
    ],
-   "execution_count": 48
+   "execution_count": 51
   },
   {
    "metadata": {},
@@ -3009,23 +3011,236 @@
    "source": "## XGBoost tree configuration"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-27T19:01:22.412183Z",
+     "start_time": "2025-04-27T19:01:20.310981Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "dtrain = xgb.DMatrix(X_train, label=y_train)\n",
-    "dval   = xgb.DMatrix(X_test,   label=y_test)\n",
+    "dval   = xgb.DMatrix(X_validate, label=y_validate)\n",
+    "dtest  = xgb.DMatrix(X_test, label=y_test)\n",
     "\n",
     "params = {\n",
     "    \"objective\": \"multi:softmax\",\n",
     "    \"num_class\": len(encoded_categories),  # Número de categorías únicas\n",
-    "    \"eval_metric\": \"mlogloss\",  # Métrica de evaluación para problemas multiclase\n",
-    "    \"eta\": 0.3,  # Tasa de aprendizaje\n",
     "    \"max_depth\": 6,  # Profundidad máxima del árbol\n",
     "    \"seed\": 42  # Semilla para reproducibilidad\n",
-    "}\n"
-   ]
+    "}\n",
+    "\n",
+    "bst = xgb.train(params, dtrain,\n",
+    "                num_boost_round=300,\n",
+    "                evals=[(dval, \"val\")],\n",
+    "                early_stopping_rounds=25)\n",
+    "\n",
+    "y_predict = bst.predict(dtest)\n",
+    "y_predict"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\tval-mlogloss:1.16653\n",
+      "[1]\tval-mlogloss:0.94479\n",
+      "[2]\tval-mlogloss:0.79852\n",
+      "[3]\tval-mlogloss:0.69352\n",
+      "[4]\tval-mlogloss:0.62600\n",
+      "[5]\tval-mlogloss:0.56471\n",
+      "[6]\tval-mlogloss:0.51803\n",
+      "[7]\tval-mlogloss:0.47839\n",
+      "[8]\tval-mlogloss:0.44774\n",
+      "[9]\tval-mlogloss:0.42471\n",
+      "[10]\tval-mlogloss:0.40613\n",
+      "[11]\tval-mlogloss:0.38833\n",
+      "[12]\tval-mlogloss:0.37480\n",
+      "[13]\tval-mlogloss:0.35909\n",
+      "[14]\tval-mlogloss:0.34738\n",
+      "[15]\tval-mlogloss:0.34146\n",
+      "[16]\tval-mlogloss:0.33008\n",
+      "[17]\tval-mlogloss:0.32466\n",
+      "[18]\tval-mlogloss:0.31721\n",
+      "[19]\tval-mlogloss:0.31449\n",
+      "[20]\tval-mlogloss:0.30869\n",
+      "[21]\tval-mlogloss:0.30266\n",
+      "[22]\tval-mlogloss:0.30200\n",
+      "[23]\tval-mlogloss:0.29749\n",
+      "[24]\tval-mlogloss:0.29540\n",
+      "[25]\tval-mlogloss:0.29079\n",
+      "[26]\tval-mlogloss:0.28947\n",
+      "[27]\tval-mlogloss:0.28522\n",
+      "[28]\tval-mlogloss:0.28549\n",
+      "[29]\tval-mlogloss:0.28295\n",
+      "[30]\tval-mlogloss:0.28111\n",
+      "[31]\tval-mlogloss:0.27912\n",
+      "[32]\tval-mlogloss:0.27858\n",
+      "[33]\tval-mlogloss:0.27652\n",
+      "[34]\tval-mlogloss:0.27547\n",
+      "[35]\tval-mlogloss:0.27523\n",
+      "[36]\tval-mlogloss:0.27459\n",
+      "[37]\tval-mlogloss:0.27457\n",
+      "[38]\tval-mlogloss:0.27350\n",
+      "[39]\tval-mlogloss:0.27246\n",
+      "[40]\tval-mlogloss:0.27098\n",
+      "[41]\tval-mlogloss:0.27058\n",
+      "[42]\tval-mlogloss:0.26956\n",
+      "[43]\tval-mlogloss:0.26946\n",
+      "[44]\tval-mlogloss:0.26919\n",
+      "[45]\tval-mlogloss:0.26810\n",
+      "[46]\tval-mlogloss:0.26831\n",
+      "[47]\tval-mlogloss:0.26903\n",
+      "[48]\tval-mlogloss:0.26879\n",
+      "[49]\tval-mlogloss:0.26825\n",
+      "[50]\tval-mlogloss:0.26699\n",
+      "[51]\tval-mlogloss:0.26687\n",
+      "[52]\tval-mlogloss:0.26667\n",
+      "[53]\tval-mlogloss:0.26694\n",
+      "[54]\tval-mlogloss:0.26748\n",
+      "[55]\tval-mlogloss:0.26801\n",
+      "[56]\tval-mlogloss:0.26929\n",
+      "[57]\tval-mlogloss:0.26848\n",
+      "[58]\tval-mlogloss:0.26810\n",
+      "[59]\tval-mlogloss:0.26790\n",
+      "[60]\tval-mlogloss:0.26764\n",
+      "[61]\tval-mlogloss:0.26786\n",
+      "[62]\tval-mlogloss:0.26793\n",
+      "[63]\tval-mlogloss:0.26707\n",
+      "[64]\tval-mlogloss:0.26659\n",
+      "[65]\tval-mlogloss:0.26676\n",
+      "[66]\tval-mlogloss:0.26682\n",
+      "[67]\tval-mlogloss:0.26703\n",
+      "[68]\tval-mlogloss:0.26688\n",
+      "[69]\tval-mlogloss:0.26693\n",
+      "[70]\tval-mlogloss:0.26696\n",
+      "[71]\tval-mlogloss:0.26644\n",
+      "[72]\tval-mlogloss:0.26620\n",
+      "[73]\tval-mlogloss:0.26612\n",
+      "[74]\tval-mlogloss:0.26635\n",
+      "[75]\tval-mlogloss:0.26645\n",
+      "[76]\tval-mlogloss:0.26600\n",
+      "[77]\tval-mlogloss:0.26598\n",
+      "[78]\tval-mlogloss:0.26584\n",
+      "[79]\tval-mlogloss:0.26586\n",
+      "[80]\tval-mlogloss:0.26601\n",
+      "[81]\tval-mlogloss:0.26683\n",
+      "[82]\tval-mlogloss:0.26661\n",
+      "[83]\tval-mlogloss:0.26684\n",
+      "[84]\tval-mlogloss:0.26735\n",
+      "[85]\tval-mlogloss:0.26716\n",
+      "[86]\tval-mlogloss:0.26739\n",
+      "[87]\tval-mlogloss:0.26786\n",
+      "[88]\tval-mlogloss:0.26830\n",
+      "[89]\tval-mlogloss:0.26858\n",
+      "[90]\tval-mlogloss:0.26834\n",
+      "[91]\tval-mlogloss:0.26819\n",
+      "[92]\tval-mlogloss:0.26859\n",
+      "[93]\tval-mlogloss:0.26907\n",
+      "[94]\tval-mlogloss:0.26909\n",
+      "[95]\tval-mlogloss:0.26944\n",
+      "[96]\tval-mlogloss:0.26896\n",
+      "[97]\tval-mlogloss:0.26865\n",
+      "[98]\tval-mlogloss:0.26935\n",
+      "[99]\tval-mlogloss:0.26946\n",
+      "[100]\tval-mlogloss:0.26997\n",
+      "[101]\tval-mlogloss:0.27005\n",
+      "[102]\tval-mlogloss:0.26987\n",
+      "[103]\tval-mlogloss:0.26983\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([3., 2., 1., 0., 2., 3., 2., 4., 0., 3., 3., 3., 0., 4., 3., 2., 3.,\n",
+       "       0., 0., 1., 2., 2., 4., 0., 4., 1., 3., 2., 2., 1., 0., 3., 4., 2.,\n",
+       "       2., 4., 4., 1., 2., 4., 0., 0., 3., 3., 2., 1., 3., 2., 1., 0., 1.,\n",
+       "       4., 1., 3., 0., 3., 0., 3., 0., 1., 2., 1., 4., 0., 2., 3., 2., 3.,\n",
+       "       0., 4., 3., 1., 2., 1., 4., 1., 0., 0., 3., 2., 0., 4., 3., 3., 1.,\n",
+       "       1., 3., 0., 3., 3., 0., 0., 0., 2., 0., 3., 2., 3., 0., 3., 4., 4.,\n",
+       "       1., 2., 4., 4., 3., 2., 3., 2., 2., 1., 0., 0., 4., 0., 4., 3., 1.,\n",
+       "       3., 0., 1., 0., 3., 4., 0., 3., 1., 1., 0., 2., 4., 4., 4., 0., 2.,\n",
+       "       4., 4., 4., 0., 1., 0., 3., 3., 0., 1., 4., 4., 4., 4., 2., 0., 3.,\n",
+       "       4., 2., 2., 1., 0., 2., 3., 1., 0., 3., 1., 1., 3., 3., 2., 3., 3.,\n",
+       "       2., 2., 3., 0., 2., 0., 3., 2., 1., 1., 1., 3., 2., 1., 4., 1., 1.,\n",
+       "       1., 1., 3., 4., 2., 2., 3., 1., 3., 3., 3., 1., 2., 2., 2., 3., 0.,\n",
+       "       0., 0., 0., 0., 2., 1., 3., 2., 2., 2., 0., 0., 2., 3., 1., 0., 1.,\n",
+       "       3., 3., 3., 3., 3., 2., 1., 3., 3., 3., 4., 4., 0., 2., 0., 4., 0.,\n",
+       "       2., 4., 1., 1., 1., 3., 1., 4., 4., 2., 2., 4., 3., 4., 3., 0., 0.,\n",
+       "       3., 2., 4., 0., 4., 3., 2., 0., 3., 2., 0., 0., 3., 4., 1., 3., 3.,\n",
+       "       2., 4., 4., 2., 4., 4., 0., 2., 4., 0., 0., 4., 0., 0., 3., 0., 3.,\n",
+       "       0., 0., 4., 4., 3., 0., 3., 4., 2., 0., 3., 0., 0., 4., 0., 0., 3.,\n",
+       "       0., 1., 3., 1., 0., 4., 4., 4., 3., 4., 3., 4., 3., 2., 2., 3., 0.,\n",
+       "       0., 0., 2., 0., 3., 0., 1., 3., 4., 1., 4., 4., 0., 3., 4., 0., 2.,\n",
+       "       1., 0., 4., 0., 3., 1., 2., 3., 0., 1., 0., 1., 0., 4., 4., 0., 0.,\n",
+       "       0., 2., 0., 1., 1., 2., 3., 4., 3., 0., 0., 0., 0., 4., 0., 1., 3.,\n",
+       "       3., 0., 4., 3., 1., 0., 1., 2., 0., 4., 1., 3., 2., 1., 0., 0., 4.,\n",
+       "       1., 2., 0., 2., 2., 1., 1., 3., 4., 3., 1., 0., 2., 3., 2., 3., 3.,\n",
+       "       1., 0., 4., 3., 2., 1., 2., 4., 1., 2., 0., 3., 2., 1., 0., 3., 4.,\n",
+       "       2., 0., 3., 1., 2., 1., 2., 3., 1., 0., 2., 2., 3., 4., 4., 1., 3.,\n",
+       "       0., 2., 2., 0., 3., 4., 1., 1., 3., 3., 2., 2., 2., 1., 2., 3., 2.,\n",
+       "       3., 3., 4., 0., 0., 0., 0., 2., 3., 2., 3., 3., 3., 4., 0., 0., 4.,\n",
+       "       2., 0., 3., 3., 0., 0., 4., 3., 0., 4., 1., 0., 3., 2., 2., 0., 0.,\n",
+       "       0., 3., 2., 4., 1., 1., 4., 1., 3., 1., 2., 0., 3., 1., 2., 2., 0.,\n",
+       "       0., 1., 2., 1., 1., 4., 0., 0., 2., 0., 0., 4., 4., 0., 2., 3., 2.,\n",
+       "       0., 3., 4., 4., 1., 0., 1., 3., 2., 1., 4., 2., 0., 1., 1., 4., 3.,\n",
+       "       0., 3., 0., 0., 0., 4., 1., 4., 3., 3., 2., 3., 0., 4., 0., 4., 1.,\n",
+       "       3., 1., 2., 2., 0., 1., 4., 1., 0., 0., 2., 2., 0., 2., 4., 4., 4.,\n",
+       "       1., 2., 4., 3., 0., 2., 4., 1., 1., 3., 3., 3., 0., 3., 0., 1., 2.,\n",
+       "       0., 1., 3., 4., 4., 2., 2., 3., 4., 2., 0., 4., 0., 3., 4., 1., 3.,\n",
+       "       2., 4., 0., 0., 4., 1., 4., 4., 3., 1., 0., 4., 0., 3., 4., 0., 2.,\n",
+       "       3., 3., 1., 1., 2., 3., 2., 0., 0., 3., 4., 1., 3., 0., 4., 3., 1.,\n",
+       "       2., 1., 0., 2., 3., 4., 4., 0., 2., 0., 4., 3., 1., 3., 0., 0., 1.,\n",
+       "       3., 1., 4., 1., 3.], dtype=float32)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 52
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Comparation of predicted values"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-27T19:02:55.271191Z",
+     "start_time": "2025-04-27T19:02:55.256351Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "\n",
+    "# Cálculo de métricas\n",
+    "accuracy = accuracy_score(y_test, y_predict)\n",
+    "precision = precision_score(y_test, y_predict, average='weighted')  # Cambia 'weighted' según el caso\n",
+    "recall = recall_score(y_test, y_predict, average='weighted')\n",
+    "f1 = f1_score(y_test, y_predict, average='weighted')\n",
+    "\n",
+    "print(f\"Accuracy: {accuracy}\")\n",
+    "print(f\"Precision: {precision}\")\n",
+    "print(f\"Recall: {recall}\")\n",
+    "print(f\"F1-Score: {f1}\")"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9236526946107785\n",
+      "Precision: 0.9244207207516499\n",
+      "Recall: 0.9236526946107785\n",
+      "F1-Score: 0.9238013299395021\n"
+     ]
+    }
+   ],
+   "execution_count": 53
   },
   {
    "metadata": {},
